<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main_screen_drawer">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Menu">

    <!-- Toolbar -->
    <View
        android:id="@+id/fragment_example_screen_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/blue"></View>
    <ImageView
        android:id="@+id/main_screen_menu_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:src="@mipmap/navigation_menu">
    </ImageView>
    <TextView
        android:id="@+id/main_screen_title"
        style="@style/TitleStyle"
        android:text="@string/home"/>

        <ImageView
            android:id="@+id/main_screen_share"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/more" />
    <!-- Loader -->
    <include layout="@layout/loader"
        android:id="@+id/main_screen_loader"
        style="@style/LoaderDetailsStyle"/>

        <!-- Fragments Container -->

    <FrameLayout
        android:id="@+id/main_screen_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">
    </FrameLayout>



</RelativeLayout>

    <LinearLayout
        android:id="@+id/main_screen_drawer_content"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:background="@color/blue_dark"
        android:orientation="vertical"
        android:layout_gravity="start">


        <!-- Search Movie -->
        <EditText
            android:id="@+id/main_screen_input_search"
            style="@style/MenuText"
            android:hint="@string/search_input"
            />

        <Button
            android:id="@+id/main_screen_button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_search"/>
    <!-- Home -->
       <TextView
           android:id="@+id/main_screen_menu_home"
           style="@style/MenuText"
           android:text="@string/home"/>

       <!-- Movies -->
    <TextView
        android:id="@+id/main_screen_menu_movies"
        style="@style/MenuText"
        android:text="@string/movies"/>

    <!-- Tv Shows -->
    <TextView
        android:id="@+id/main_screen_menu_tv_shows"
        style="@style/MenuText"
        android:text="@string/tv_shows"/>


</LinearLayout>

    </android.support.v4.widget.DrawerLayout>